fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -343,7 +343,7 @@ figure>a>img {
     margin: auto;
     padding: 20px;
     min-width: 200px;
-    max-width: 900px;
+    max-width: 860px;
     line-height: 1.5;
 }
 
